--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script>
+    window.init = {
+      id: 3,
+      user: 'demo'
+    }
+  </script>
 </body>
 
 </html>
