Minor changes fixed

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     */
 
     window.init = {
-      label: 'Trivians',
+      label: 'Powered by Trivians',
       align: 'right',
       button_color: '#3f51b5',
       logo: 'https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png',
